Its working but i dont know why..

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -19,7 +19,7 @@
      <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
      <%= f.input :description %>
-     <%= f.association :ingredient %>
+     <%= f.input :ingredient %>
      <%= f.button :submit, class: "btn btn-primary"%>
    <% end %>
  </div>
